--- a/signed_addition_overflow/manifest.json
+++ b/signed_addition_overflow/manifest.json
@@ -1,6 +1,6 @@
 
 {
-  "display_name": "Signed Integer Overflow",
+  "display_name": "Signed Integer Addition Overflow",
 
   "visible_filenames": [
     "signed_overflow.tests.cpp",
