Add CWE-197 to check_bypass

--- a/check_bypass/manifest.json
+++ b/check_bypass/manifest.json
@@ -1,6 +1,6 @@
 
 {
-  "display_name": "CWE-190: Integer Overflow or Wraparound",
+  "display_name": "CWE-190 and CWE-197: Bypassing Checks",
 
   "visible_filenames": [
     "check_bypass.tests.cpp",
