--- a/yatzy/makefile
+++ b/yatzy/makefile
@@ -1,34 +1,37 @@
 CXXFLAGS += -I.
-CXXFLAGS += -std=c++1z
-CXXFLAGS += -Wall
-CXXFLAGS += -Wextra
-CXXFLAGS += -Wshadow
-CXXFLAGS += -Wfloat-equal
-CXXFLAGS += -O
-CXXFLAGS += -Wsequence-point
-CXXFLAGS += -Wmissing-noreturn
-CXXFLAGS += -Wunreachable-code
+CXXFLAGS += -std=c++17
+CXXFLAGS += -Wall -Wextra
+CXXFLAGS += -fprofile-arcs -ftest-coverage
 
-# CXXFLAGS += -fprofile-arcs -ftest-coverage
+CFLAGS += -I.
+CFLAGS += -std=c11
+CFLAGS += -Wall -Wextra -Werror
+CFLAGS += -fprofile-arcs -ftest-coverage
 
-CXXFLAGS += -fsanitize=leak,address,undefined
-CXXFLAGS += -fno-sanitize-recover=all
-CXXFLAGS += -fno-omit-frame-pointer
+GTEST_LIBS = -lgtest -lgtest_main -pthread
 
 HPP_FILES = $(wildcard *.hpp)
 COMPILED_HPP_FILES = $(patsubst %.hpp,%.compiled_hpp,$(HPP_FILES))
 CPP_FILES = $(wildcard *.cpp)
-OBJ_FILES = $(patsubst %.cpp,%.o,$(CPP_FILES)) /usr/lib/catch_main.o
+COMPILED_CPP_FILES = $(patsubst %.cpp,%.o,$(CPP_FILES))
 
-%.o: %.cpp
-	@$(CXX) -c -o $@ $< $(CXXFLAGS)
+H_FILES = $(wildcard *.h)
+COMPILED_H_FILES = $(patsubst %.h,%.compiled_h,$(H_FILES))
+C_FILES = $(wildcard *.c)
+COMPILED_C_FILES = $(patsubst %.c,%.o,$(C_FILES))
 
 .PHONY: test.output
 test.output: test makefile
-	@./$<
+	@./$< --gtest_shuffle
 
-test: makefile $(OBJ_FILES) $(COMPILED_HPP_FILES)
-	@$(CXX) $(CXXFLAGS) -O $(OBJ_FILES) -o $@
+test: makefile $(COMPILED_CPP_FILES) $(COMPILED_C_FILES) $(COMPILED_HPP_FILES)
+	@$(CXX) $(CXXFLAGS) -O $(COMPILED_CPP_FILES) $(COMPILED_C_FILES) $(GTEST_LIBS) -o $@
+
+%.o: %.cpp
+	@$(CXX) -c $(CXXFLAGS) -O $< -o $@
+
+%.o: %.c
+	@$(CC) -c $(CFLAGS) -O $< -o $@
 
 # This rule ensures header files build in their own right.
 # The quality of header files is important because header files
@@ -37,3 +40,6 @@ test: makefile $(OBJ_FILES) $(COMPILED_HPP_FILES)
 
 %.compiled_hpp: %.hpp
 	@$(CXX) -x c++ $(CXXFLAGS) -c -o $@ $<
+
+%.compiled_h: %.h
+	@$(C) -x c $(CFLAGS) -c -o $@ $<
