Revert "Add the files as they are in yatzy"
This reverts commit a909dd5eeed3d32e27f556066b7a05a880604f2c.

--- a/yatzy/makefile
+++ b/yatzy/makefile
@@ -1,37 +1,34 @@
 CXXFLAGS += -I.
-CXXFLAGS += -std=c++17
-CXXFLAGS += -Wall -Wextra
-CXXFLAGS += -fprofile-arcs -ftest-coverage
+CXXFLAGS += -std=c++1z
+CXXFLAGS += -Wall
+CXXFLAGS += -Wextra
+CXXFLAGS += -Wshadow
+CXXFLAGS += -Wfloat-equal
+CXXFLAGS += -O
+CXXFLAGS += -Wsequence-point
+CXXFLAGS += -Wmissing-noreturn
+CXXFLAGS += -Wunreachable-code
 
-CFLAGS += -I.
-CFLAGS += -std=c11
-CFLAGS += -Wall -Wextra -Werror
-CFLAGS += -fprofile-arcs -ftest-coverage
+# CXXFLAGS += -fprofile-arcs -ftest-coverage
 
-GTEST_LIBS = -lgtest -lgtest_main -pthread
+CXXFLAGS += -fsanitize=leak,address,undefined
+CXXFLAGS += -fno-sanitize-recover=all
+CXXFLAGS += -fno-omit-frame-pointer
 
 HPP_FILES = $(wildcard *.hpp)
 COMPILED_HPP_FILES = $(patsubst %.hpp,%.compiled_hpp,$(HPP_FILES))
 CPP_FILES = $(wildcard *.cpp)
-COMPILED_CPP_FILES = $(patsubst %.cpp,%.o,$(CPP_FILES))
+OBJ_FILES = $(patsubst %.cpp,%.o,$(CPP_FILES)) /usr/lib/catch_main.o
 
-H_FILES = $(wildcard *.h)
-COMPILED_H_FILES = $(patsubst %.h,%.compiled_h,$(H_FILES))
-C_FILES = $(wildcard *.c)
-COMPILED_C_FILES = $(patsubst %.c,%.o,$(C_FILES))
+%.o: %.cpp
+	@$(CXX) -c -o $@ $< $(CXXFLAGS)
 
 .PHONY: test.output
 test.output: test makefile
-	@./$< --gtest_shuffle
+	@./$<
 
-test: makefile $(COMPILED_CPP_FILES) $(COMPILED_C_FILES) $(COMPILED_HPP_FILES)
-	@$(CXX) $(CXXFLAGS) -O $(COMPILED_CPP_FILES) $(COMPILED_C_FILES) $(GTEST_LIBS) -o $@
-
-%.o: %.cpp
-	@$(CXX) -c $(CXXFLAGS) -O $< -o $@
-
-%.o: %.c
-	@$(CC) -c $(CFLAGS) -O $< -o $@
+test: makefile $(OBJ_FILES) $(COMPILED_HPP_FILES)
+	@$(CXX) $(CXXFLAGS) -O $(OBJ_FILES) -o $@
 
 # This rule ensures header files build in their own right.
 # The quality of header files is important because header files
@@ -40,6 +37,3 @@ test: makefile $(COMPILED_CPP_FILES) $(COMPILED_C_FILES) $(COMPILED_HPP_FILES)
 
 %.compiled_hpp: %.hpp
 	@$(CXX) -x c++ $(CXXFLAGS) -c -o $@ $<
-
-%.compiled_h: %.h
-	@$(C) -x c $(CFLAGS) -c -o $@ $<
