--- a/comparisons/manifest.json
+++ b/comparisons/manifest.json
@@ -7,7 +7,8 @@
     "comparisons.cpp",
     "comparisons.hpp",
     "makefile",
-    "cyber-dojo.sh"
+    "cyber-dojo.sh",
+    "readme.txt"
   ],
 
   "hidden_filenames": [ ".*\\.gcov", ".*\\.gcno" ],
