--- a/free_use/manifest.json
+++ b/free_use/manifest.json
@@ -7,7 +7,8 @@
     "free_use.cpp",
     "free_use.hpp",
     "makefile",
-    "cyber-dojo.sh"
+    "cyber-dojo.sh",
+    "readme.txt"
   ],
 
   "hidden_filenames": [ ".*\\.gcov", ".*\\.gcno" ],
