--- a/string_length/manifest.json
+++ b/string_length/manifest.json
@@ -7,7 +7,8 @@
     "string_length.cpp",
     "string_length.hpp",
     "makefile",
-    "cyber-dojo.sh"
+    "cyber-dojo.sh",
+    "readme.txt"
   ],
 
   "hidden_filenames": [ ".*\\.gcov", ".*\\.gcno" ],
