--- a/free_use/manifest.json
+++ b/free_use/manifest.json
@@ -1,6 +1,6 @@
 
 {
-  "display_name": "CWE-415 and CWE-416: Use of free",
+  "display_name": "CWE-415 and CWE-416: Free In Error Path",
 
   "visible_filenames": [
     "free_use.tests.cpp",
