--- a/heartbleed/manifest.json
+++ b/heartbleed/manifest.json
@@ -1,7 +1,5 @@
-
 {
   "display_name": "CVE-2014-0160: Heartbleed",
-
   "visible_filenames": [
     "heartbleed.tests.cpp",
     "heartbleed.c",
@@ -10,12 +8,15 @@
     "cyber-dojo.sh",
     "readme.txt"
   ],
-
-  "hidden_filenames": [ ".*\\.gcov", ".*\\.gcno" ],
-
+  "hidden_filenames": [
+    ".*\\.gcov",
+    ".*\\.gcno"
+  ],
   "image_name": "cyberdojofoundation/gcc_googletest",
-
   "max_seconds": 20,
-
-  "filename_extension": [ ".c", ".h", ".cpp" ]
+  "filename_extension": [
+    ".c",
+    ".h",
+    ".cpp"
+  ]
 }
