--- a/docker/Dockerfile.base
+++ b/docker/Dockerfile.base
@@ -1,4 +1,4 @@
-FROM cyberdojofoundation/clangplusplus
+FROM cyberdojofoundation/clangplusplus:ee058a5
 LABEL maintainer=jon@jaggersoft.com
 
 COPY catch_main.cpp /usr/src
