Revert "Use explicit tag on Dockerfile.base FROM image name"
This reverts commit b89a22b35d4cb748c34e87b34634333fde29ebd8.

--- a/docker/Dockerfile.base
+++ b/docker/Dockerfile.base
@@ -1,4 +1,4 @@
-FROM cyberdojofoundation/clangplusplus:ee058a5
+FROM cyberdojofoundation/clangplusplus
 LABEL maintainer=jon@jaggersoft.com
 
 COPY catch_main.cpp /usr/src
