--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,5 +14,5 @@ add_subdirectory(free_use)
 #add_subdirectory(heartbleed)
 add_subdirectory(signed_addition_overflow)
 #add_subdirectory(string_length)
-#add_subdirectory(type_conversion)
+add_subdirectory(type_conversion)
 #add_subdirectory(yatzy)
