--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,4 +15,4 @@ add_subdirectory(free_use)
 add_subdirectory(signed_addition_overflow)
 #add_subdirectory(string_length)
 add_subdirectory(type_conversion)
-#add_subdirectory(yatzy)
+add_subdirectory(yatzy)
