Move tests.cpp out of the way of the Makefile build

--- a/check_bypass/CMakeLists.txt
+++ b/check_bypass/CMakeLists.txt
@@ -1,7 +1,7 @@
 find_package(Catch2 CONFIG REQUIRED)
 
 file(GLOB sources CONFIGURE_DEPENDS "*.cpp")
-add_executable(check_bypass ${sources})
+add_executable(check_bypass ${sources} cmake/tests.cpp)
 target_link_libraries(check_bypass PRIVATE Catch2::Catch2)
 
 include(Catch)
