--- a/free_use/CMakeLists.txt
+++ b/free_use/CMakeLists.txt
@@ -1,7 +1,7 @@
 find_package(Catch2 CONFIG REQUIRED)
 
 file(GLOB sources CONFIGURE_DEPENDS "*.cpp")
-add_executable(free_use ${sources})
+add_executable(free_use ${sources} cmake/tests.cpp)
 target_link_libraries(free_use PRIVATE Catch2::Catch2)
 
 include(Catch)
