--- a/type_conversion/CMakeLists.txt
+++ b/type_conversion/CMakeLists.txt
@@ -1,7 +1,7 @@
 find_package(Catch2 CONFIG REQUIRED)
 
 file(GLOB sources CONFIGURE_DEPENDS "*.cpp")
-add_executable(type_conversion ${sources} type_conversion.c)
+add_executable(type_conversion ${sources} type_conversion.c cmake/tests.cpp)
 target_link_libraries(type_conversion PRIVATE Catch2::Catch2)
 
 include(Catch)
