--- a/yatzy/CMakeLists.txt
+++ b/yatzy/CMakeLists.txt
@@ -1,7 +1,7 @@
 find_package(Catch2 CONFIG REQUIRED)
 
 file(GLOB sources CONFIGURE_DEPENDS "*.cpp")
-add_executable(yatzy ${sources} yatzy.c)
+add_executable(yatzy ${sources} yatzy.c cmake/tests.cpp)
 target_link_libraries(yatzy PRIVATE Catch2::Catch2)
 
 include(Catch)
