--- a/signed_addition_overflow/CMakeLists.txt
+++ b/signed_addition_overflow/CMakeLists.txt
@@ -1,7 +1,7 @@
 find_package(Catch2 CONFIG REQUIRED)
 
 file(GLOB sources CONFIGURE_DEPENDS "*.cpp")
-add_executable(signed_addition_overflow ${sources})
+add_executable(signed_addition_overflow ${sources} cmake/tests.cpp)
 target_link_libraries(signed_addition_overflow PRIVATE Catch2::Catch2)
 
 include(Catch)
