--- a/string_length/CMakeLists.txt
+++ b/string_length/CMakeLists.txt
@@ -1,7 +1,7 @@
 find_package(Catch2 CONFIG REQUIRED)
 
 file(GLOB sources CONFIGURE_DEPENDS "*.cpp")
-add_executable(string_length ${sources})
+add_executable(string_length ${sources} cmake/tests.cpp)
 target_link_libraries(string_length PRIVATE Catch2::Catch2)
 
 include(Catch)
