--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -14,14 +14,10 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: configure
-        run: ./configure
-
       - name: Install dependencies
+        working-directory: docker
+        run: ./install.sh
+
+      - name: Make check_bypass
+        working-directory: check_bypass
         run: make
-
-      - name: Run check
-        run: make check
-
-      - name: Run distcheck
-        run: make distcheck
