--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -15,8 +15,7 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Install dependencies
-        working-directory: docker
-        run: sudo ./install.sh
+        run: cd docker && sudo ./install.sh
 
       - name: Make check_bypass
         working-directory: check_bypass
