--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,8 +11,12 @@ enable_testing()
 add_subdirectory(check_bypass)
 add_subdirectory(comparisons)
 add_subdirectory(free_use)
-#add_subdirectory(heartbleed)
+if (NOT WIN32)
+    add_subdirectory(heartbleed)
+endif ()
 add_subdirectory(signed_addition_overflow)
-#add_subdirectory(string_length)
+if (NOT WIN32)
+    add_subdirectory(string_length)
+endif ()
 add_subdirectory(type_conversion)
 add_subdirectory(yatzy)
